--- a/webapp/view/PurchaseOrder.view.xml
+++ b/webapp/view/PurchaseOrder.view.xml
@@ -17,8 +17,12 @@ xmlns:t="sap.ui.table">
 						class="sapUiResponsiveContentPadding">
 						<items>
 							<IconTabFilter id="tab1" text="Purchase Order">
-								<Button id="btn1" text="Save as Draft" tooltip="Add" press="fDraft" icon="sap-icon://save"/>
-								<Button id="btn2" text="Add" tooltip="Add" press="onSave" icon="sap-icon://add"/>
+							<Toolbar>
+								<content>
+									<Button id="btn1" text="Save as Draft" tooltip="Add" press="fDraft" icon="sap-icon://save"/>
+									<Button id="btn2" text="Add" tooltip="Add" press="onSave" icon="sap-icon://add"/>
+								</content>
+							</Toolbar>
 								<VBox class="sapUiResponsiveMargin">
 									<f:SimpleForm editable="true" layout="ResponsiveGridLayout" id="form0" width="100%">
 										<!---Vendor Name-->
