--- a/webapp/view/TransactionOrder.view.xml
+++ b/webapp/view/TransactionOrder.view.xml
@@ -11,7 +11,7 @@ xmlns:html="http://www.w3.org/1999/xhtml"
 xmlns:t="sap.ui.table">
 	<App>
 		<pages>
-			<Page title="PO Transaction">
+			<Page title="Contract Transaction">
 				<content>
 					<IconTabBar id="idIconTabBarInlineMode" select="fIconTabSelect" headerMode="Inline" upperCase="true" expandable="false"
 						class="sapUiResponsiveContentPadding">
@@ -34,6 +34,14 @@ xmlns:t="sap.ui.table">
 										<Label text="Document Number"/>
 										<t:template>
 											<Text text="{oModelOpenPO>DocNum}" wrapping="false"/>
+										</t:template>
+									</t:Column>
+									<!--Project Code-->
+									<t:Column id="colProjCode" width="12rem" filterValue="{oFilter>/GridFilter/DocNum}" filterOperator="DocNumFilter" filtered="true"
+										filterProperty="DocNum">
+										<Label text="Project Code"/>
+										<t:template>
+											<Text text="" wrapping="false"/>
 										</t:template>
 									</t:Column>
 									<!--VendorName-->
@@ -77,7 +85,7 @@ xmlns:t="sap.ui.table">
 									</t:Column>
 								</t:Table>
 							</IconTabFilter>
-							<IconTabFilter id="tab2" text="PO No:" count="{Retention>/POCount/PONum}" key="tab2">
+							<IconTabFilter id="tab2" text="Contract No:" count="{Retention>/POCount/PONum}" key="tab2">
 							<Toolbar>
 								<content>
 								<Button id="btn1" text="Update" tooltip="Add" press="fDraft" icon="sap-icon://save"/>
@@ -88,19 +96,19 @@ xmlns:t="sap.ui.table">
 							</Toolbar>
 								<VBox class="sapUiTinyMargin">
 									<f:SimpleForm editable="true" layout="ResponsiveGridLayout" id="form0" width="100%">
-										<!---Vendor Name-->
+										<!---Contractor-->
 										<Label text="Contractor" width="100%">
 											<layoutData>
 												<l:GridData span="L3 M2 S12"/>
 											</layoutData>
 										</Label>
 										<Input id="BPCode" type="Text" value="{oMdlAllBP>/allbp/Vendor}" showValueHelp="true" valueHelpOnly="true"
-											valueHelpRequest="onHandleValueBPMaster" width="100%">
+											valueHelpRequest="onHandleValueBPMaster" required="true" width="100%">
 											<layoutData>
 												<l:GridData span="L3 M4 S12"/>
 											</layoutData>
 										</Input>
-										<!--Document Number-->
+										<!--Transaction Number-->
 										<Label text="Transaction Number" width="100%">
 											<layoutData>
 												<l:GridData span="L3 M2 S12"/>
@@ -119,7 +127,7 @@ xmlns:t="sap.ui.table">
 											</layoutData>
 										</Label>
 										<ComboBox id="Retention" width="100%" items="{Retention>/Retention}" selectedKey="{POData>/POCreation/Retention}"
-											selectionChange="onSelectRetention" loadItems="TransCode">
+											selectionChange="onSelectRetention" required="true" loadItems="TransCode">
 											<core:Item key="{Retention>CODE}" text="{Retention>NAME}"/>
 											<layoutData>
 												<l:GridData span="L3 M4 S12"/>
@@ -150,16 +158,40 @@ xmlns:t="sap.ui.table">
 												<l:GridData span="L3 M4 S12"/>
 											</layoutData>
 										</Input>
+										<!---Project Code-->
+										<Label text="Project Code" width="100%">
+											<layoutData>
+												<l:GridData span="L3 M2 S12"/>
+											</layoutData>
+										</Label>
+										<Input width="100%" id="ProjCode" required="true" textAlign="Right" value="" liveChange="" >
+											<layoutData>
+												<l:GridData span="L3 M4 S12"/>
+											</layoutData>
+										</Input>
+										<!--Progressive-->
+										<Label text="Progressive" width="100%">
+											<layoutData>
+												<l:GridData span="L3 M2 S12"/>
+											</layoutData>
+										</Label>
+										<ComboBox id="Progressive" required="true" width="100%" items="{Retention>/Retention}" selectedKey="{POData>/POCreation/Retention}"
+											selectionChange="onSelectRetention" >
+											<core:Item key="{Retention>CODE}" text="{Retention>NAME}"/>
+											<layoutData>
+												<l:GridData span="L3 M4 S12"/>
+											</layoutData>
+										</ComboBox>
 										<!--FileUploader-->
 										<u:FileUploader id="fileUploader" name="myFileUpload" uploadUrl="upload/" tooltip="Upload your file to the local server"
-											uploadComplete="handleUploadComplete" width="100%" placeholder="Attachment"></u:FileUploader>
+											uploadComplete="handleUploadComplete" width="100%"/>
 										<!--Remarks-->
 										<Label text="Remarks." width="100%">
 											<layoutData>
 												<l:GridData span="L3 M2 S12"/>
 											</layoutData>
 										</Label>
-										<TextArea id="TextArea" cols="200" width="100%" height="100px">
+										<TextArea id="TextArea" required="true" cols="200" width="100%" height="100px">
 											<layoutData>
 												<l:GridData span="L9 M10 S12"/>
 											</layoutData>
