--- a/webapp/view/Main.view.xml
+++ b/webapp/view/Main.view.xml
@@ -22,18 +22,14 @@ xmlns:tnt="sap.tnt">
     <tnt:sideContent>
         <tnt:SideNavigation expanded="true" selectedKey="" itemSelect="onItemSelect">
 
-            <tnt:NavigationList>
-                <tnt:NavigationListItem expanded="false" text="Contracts" icon="sap-icon://contacts">
-                    <tnt:NavigationListItem text="Create Transaction" key="purchaseorder" />
-                    <tnt:NavigationListItem text="Transaction Records" key="transactionrecords" />
+            <tnt:NavigationList items="{path: '/navigation'}" >
+                <tnt:NavigationListItem text="{title}" icon="{icon}" enabled="true" expanded="false" items="{items}" key="{key}">
+                    <tnt:NavigationListItem text="{title}" key="{key}" enabled="true" />
                 </tnt:NavigationListItem>
-                <tnt:NavigationListItem text="Contract Billing and Retention" key="paymentprocessing" icon="sap-icon://employee" />
-                <tnt:NavigationListItem text="Configuration" key="configuration" icon="sap-icon://developer-settings" />
             </tnt:NavigationList>
-
             <tnt:fixedItem>
-            <tnt:NavigationList>
-            	<tnt:NavigationListItem text="Contract Status Report" key="contractreport" icon="sap-icon://travel-expense-report" />
+            <tnt:NavigationList items="{path: '/fixedNavigation'}" >
+            	<tnt:NavigationListItem text="{title}" icon="{icon}" />
             </tnt:NavigationList>
             </tnt:fixedItem>
         </tnt:SideNavigation>
