--- a/webapp/view/PurchaseOrder.view.xml
+++ b/webapp/view/PurchaseOrder.view.xml
@@ -16,16 +16,16 @@ xmlns:t="sap.ui.table">
 					<IconTabBar id="idIconTabBarInlineMode" select="IconTabSelect" headerMode="Inline" upperCase="true" expandable="false"
 						class="sapUiResponsiveContentPadding">
 						<items>
-							<IconTabFilter id="tab1" text="Purchase Order">
+							<IconTabFilter id="tab1" text="Contracts">
 							<Toolbar>
 								<content>
-									<Button id="btn1" text="Save as Draft" tooltip="Add" press="fDraft" icon="sap-icon://save"/>
-									<Button id="btn2" text="Add" tooltip="Add" press="onSave" icon="sap-icon://add"/>
+									<Button id="btnPODraft" text="Save as Draft" tooltip="Add" press="fDraft" icon="sap-icon://save"/>
+									<Button id="btnPOAdd" text="Add" tooltip="Add" press="onSave" icon="sap-icon://add"/>
 								</content>
 							</Toolbar>
 								<VBox class="sapUiResponsiveMargin">
 									<f:SimpleForm editable="true" layout="ResponsiveGridLayout" id="form0" width="100%">
-										<!---Vendor Name-->
+										<!--- Contractor-->
 										<Label text="Contractor" width="100%">
 											<layoutData>
 												<l:GridData span="L3 M2 S12"/>
@@ -90,7 +90,7 @@ xmlns:t="sap.ui.table">
 												<l:GridData span="L3 M2 S12"/>
 											</layoutData>
 										</Label>
-										<Input width="100%" id="ProjCode" required="true" textAlign="Right" value="{POData>/POCreation/ProjectCode}" >
+										<Input width="100%" id="ProjCode" required="true" valueHelpRequest="onHandleValueProjCode" showValueHelp="true" value="{POData>/POCreation/ProjectCode}" >
 											<layoutData>
 												<l:GridData span="L3 M4 S12"/>
 											</layoutData>
